<resources>
    <string name="app_name">Evil-Hangman</string>
    <string name="HEAD">HANGMAN</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="history">History</string>
    <string name="quit">Quit game</string>

    <string name="Settings">SETTINGS</string>
    <string name="History">HIGHSCORES</string>
    <string name="WinScreen">YEAY YOU WON!</string>

    <string name="gallows">The Gallows</string>
    <string name="head">The Head</string>
    <string name="body">The Body</string>
    <string name="arm">An Arm</string>
    <string name="leg">A Leg</string>
    <string name="guessleft">Guesses left: </string>
    <string name="guessletters">Guessed letters:</string>
    <string name="hangmansymbol">symbol</string>


    <string name="lenword">CHOOSE LENGTH WORD:</string>
    <string name="incorrectguesses">CHOOSE AMOUNT INCORRECT GUESSES:</string>
    <string name="eviltoggle">GOOD or EVIL?</string>
    <string name="evil">EVIL</string>
    <string name="good">GOOD</string>
    <string name="winnername">Please enter your name</string>
    <string name="playagainbutton">Play again!</string>


</resources>
