<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.hasine.evil_hangman.MainActivityHangman">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/action_settings"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/action_extra_settings"
                android:icon="@drawable/ic_action_settings"
                android:showAsAction="never"
                android:title="@string/settings"
                tools:ignore="AppCompatResource" />

            <item
                android:id="@+id/action_newgame"
                android:icon="@drawable/ic_action_replay"
                android:showAsAction="never"
                android:title="@string/newgame"
                tools:ignore="AppCompatResource" />

            <item
                android:id="@+id/action_history"
                android:icon="@drawable/ic_action_about"
                android:showAsAction="never"
                android:title="@string/history"
                tools:ignore="AppCompatResource" />

            <item
                android:id="@+id/action_quitgame"
                android:icon="@drawable/ic_menu_close_clear_cancel"
                android:showAsAction="never"
                android:title="@string/quit"
                tools:ignore="AppCompatResource" />
        </menu>
    </item>
</menu>
