<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/lenword">
        <SeekBarPreference
            android:defaultValue="6"
            android:key="seekBar1"
            android:id="@+id/seekBar1">
        </SeekBarPreference>
        <EditTextPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:defaultValue="6"
            android:id="@+id/textsb1"/>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/incorrectguesses">
        <SeekBarPreference
            android:defaultValue="7"
            android:key="seekBar2"
            android:id="@+id/seekBar2">
        </SeekBarPreference>
        <EditTextPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:defaultValue="7"
            android:id="@+id/textsb2"/>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="GOOD OR EVIL">
        <SwitchPreference
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="15dp"
            android:text="@string/eviltoggle"
            android:summary="Please choose type of gameplay"
            android:textColor="#FFF"
            android:textOn="@string/evil"
            android:textOff="@string/good"
            android:key="gametype"
            android:checked="true"
            android:id="@+id/switch1" />
    </PreferenceCategory>
</PreferenceScreen>