<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#FF000000"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hasine.evil_hangman.settings"
    tools:showIn="@layout/activity_win_screen">

    <ImageView
        android:contentDescription="@string/hangmansymbol"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/android_hangman_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/WinScreen"
        android:textColor="#FF3"
        android:textSize="36sp"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:id="@+id/settings"/>

    <ImageView
        android:contentDescription="@string/WinScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/youwin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/winnername"
        android:textColorHint="#FF3"
        android:textSize="26sp"
        android:textColor="#FFF"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:id="@+id/winnername"
        android:inputType="textPersonName"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#F00"
        android:textStyle="bold"
        android:hint="Submit"
        android:id="@+id/submit"
        android:onClick="submit"/>
</LinearLayout>
